styling: fix alignment issues

--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -6,20 +6,13 @@
 }
 
 .main-content-cart {
-  max-width: 1024px;
-}
-
-.cart-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  margin-top: 20px;
-  gap: 20px;
+  width: 1024px;
 }
 
 table {
   padding: 20px 5px 5px 5px;
   text-align: left;
+  width: 100%;
 }
 
 tbody {
@@ -94,4 +87,11 @@ td {
 .remove-button,
 .button-pay {
   margin: 0 10px 0 10px;
+}
+
+.cart-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 10px 0 0 0;
 }
