--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,8 +20,7 @@ footer {
 
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: 10px auto 20px auto;
 }
 
 .footer-column {
@@ -55,12 +54,13 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   border-top: 1px solid var(--primary-color);
-  padding: 10px 10px 0 10px;
-  margin-top: 10px;
+  padding-top: 10px;
 }
 
-.footer-right {
+.footer-right,
+.footer-left {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
