--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -9,8 +9,8 @@
   padding: 10px;
   max-width: 230px;
   height: 200px;
-  border-left: 1px solid var(--background-color-card);
-  border-right: 1px solid var(--background-color-card);
+  border-left: 2px solid var(--background-color-card);
+  border-right: 2px solid var(--background-color-card);
 
   /* background-color: var(--background-color-card); */
 }
